refactor(database): 更新数据库连接配置并优化相关代码
- 修改了 application.yml 中的数据库连接配置- 优化了多个类中的代码格式和注释
-调整了部分方法的参数和返回类型
- 移除了 DataInitializer 类